--- a/organigramme.html
+++ b/organigramme.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Organigramme — CS Consenvoye</title>
+
   <style>
     :root{
       --glass: rgba(20,20,20,.55);
@@ -14,7 +15,13 @@
       --radius: 22px;
       --btnRadius: 18px;
     }
-    *{box-sizing:border-box}
+
+    *{ box-sizing:border-box; }
+
+    /* ✅ Background figé (robuste sur Android) */
+    html, body{
+      height:100%;
+    }
     body{
       margin:0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -24,61 +31,71 @@
       display:flex;
       justify-content:center;
       padding:14px;
+      overflow:auto;
     }
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:url("background.png") center top / cover no-repeat;
+      transform: translateZ(0);
+      z-index:-2;
+    }
+    body::after{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:
+        radial-gradient(circle at 30% 10%, rgba(255,255,255,.10), transparent 45%),
+        linear-gradient(to bottom, rgba(0,0,0,.30), rgba(0,0,0,.60));
+      z-index:-1;
+    }
+
     .page{
       width:min(520px, 100%);
-      position:relative;
       border-radius:28px;
       overflow:hidden;
       box-shadow: var(--shadow);
       border: 1px solid rgba(255,255,255,.08);
-      background:#000;
-    }
-    .bg{
-      position:absolute; inset:0;
-      background:url("background.png") center/cover no-repeat;
-      filter: grayscale(1) contrast(1.05);
-      transform: scale(1.02);
-    }
-    .veil{
-      position:absolute; inset:0;
-      background: radial-gradient(circle at 30% 10%, rgba(255,255,255,.10), transparent 45%),
-                  linear-gradient(to bottom, rgba(0,0,0,.35), rgba(0,0,0,.55));
+      background: rgba(0,0,0,.20);
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
     }
 
     header{
-      position:relative;
-      padding: 16px 16px 8px;
+      padding: 12px 14px 6px; /* ✅ plus compact */
       display:flex;
       align-items:center;
       justify-content:space-between;
       gap:12px;
     }
+
     .title{
-      font-size: 34px;
+      font-size: 30px; /* un poil moins gros */
       font-weight: 900;
       letter-spacing:.2px;
       text-shadow: 0 8px 18px rgba(0,0,0,.65);
       opacity:.92;
     }
-    .topBtns{display:flex; gap:10px;}
+
+    .topBtns{ display:flex; gap:10px; }
     .chipBtn{
       border:1px solid rgba(255,255,255,.15);
-      background: rgba(0,0,0,.45);
+      background: rgba(0,0,0,.40);
       color: var(--text);
-      padding: 10px 14px;
+      padding: 9px 12px;
       border-radius: 999px;
-      font-weight:700;
+      font-weight:800;
       cursor:pointer;
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       box-shadow: 0 10px 25px rgba(0,0,0,.35);
     }
+    .chipBtn:active{ transform: translateY(1px); }
 
     .card{
-      position:relative;
-      margin: 10px 14px 14px;
-      padding: 14px;
+      margin: 8px 12px 10px; /* ✅ réduit */
+      padding: 10px; /* ✅ réduit */
       border-radius: var(--radius);
       background: var(--glass);
       border:1px solid var(--stroke);
@@ -87,97 +104,103 @@
       box-shadow: 0 16px 40px rgba(0,0,0,.35);
     }
 
-    /* Direction layout: Chef centré en haut, adjoints gauche/droite dessous */
-    .directionWrap{display:grid; gap:12px;}
-    .chefRow{display:flex; justify-content:center;}
+    /* ✅ Commandement compact */
+    .directionWrap{
+      display:grid;
+      gap:10px;
+    }
+    .chefRow{ display:flex; justify-content:center; }
     .adjRow{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap:12px;
+      gap:10px;
     }
 
     .badge{
       width:100%;
-      border-radius: 18px;
-      padding: 12px 12px;
+      border-radius: 16px;
+      padding: 10px 10px; /* ✅ réduit */
       border:1px solid rgba(255,255,255,.14);
-      box-shadow: 0 18px 35px rgba(0,0,0,.35);
+      box-shadow: 0 14px 28px rgba(0,0,0,.30);
       text-align:center;
-      min-height: 92px;
-      display:flex; flex-direction:column; justify-content:center;
+      min-height: 68px; /* ✅ beaucoup moins haut */
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
     }
     .badge .role{
-      font-weight:900;
+      font-weight:1000;
       letter-spacing:.6px;
       text-transform:uppercase;
-      font-size:14px;
+      font-size:12px; /* ✅ plus petit */
       opacity:.95;
+      line-height:1.05;
     }
     .badge .name{
-      margin-top:6px;
-      font-weight:800;
-      font-size:18px;
+      margin-top:5px;
+      font-weight:900;
+      font-size:15px; /* ✅ plus petit */
       text-shadow: 0 10px 16px rgba(0,0,0,.55);
+      line-height:1.15;
+      /* ✅ autorise retour ligne pour noms complets */
+      white-space: normal;
+      overflow-wrap: anywhere;
     }
 
-    .chef{background: linear-gradient(180deg, rgba(250,190,80,.92), rgba(220,140,35,.88)); color:#1b1206;}
-    .adj1{background: linear-gradient(180deg, rgba(95,150,210,.90), rgba(55,100,155,.88));}
-    .adj2{background: linear-gradient(180deg, rgba(140,120,190,.90), rgba(95,75,150,.88));}
+    .chef{ background: linear-gradient(180deg, rgba(250,190,80,.92), rgba(220,140,35,.88)); color:#1b1206; }
+    .adj1{ background: linear-gradient(180deg, rgba(95,150,210,.90), rgba(55,100,155,.88)); }
+    .adj2{ background: linear-gradient(180deg, rgba(140,120,190,.90), rgba(95,75,150,.88)); }
 
+    /* ✅ "Pôles" centré */
     .sectionTitle{
-      margin: 0 14px 8px;
-      position:relative;
-      font-weight: 900;
+      margin: 6px 14px 8px;
+      font-weight: 1000;
       letter-spacing:.8px;
       text-transform: uppercase;
-      color: rgba(255,255,255,.75);
+      color: rgba(255,255,255,.78);
       text-shadow: 0 10px 16px rgba(0,0,0,.55);
+      text-align:center;
     }
 
-    /* Pôles grid */
     .polesGrid{
-      position:relative;
       display:grid;
       grid-template-columns: 1fr 1fr;
       gap: 12px;
       padding: 0 14px 16px;
     }
-    @media (min-width: 520px){
-      .polesGrid{ grid-template-columns: 1fr 1fr; }
-    }
 
     .poleBtn{
       border: none;
       border-radius: 20px;
-      padding: 18px 12px;
-      min-height: 92px;
+      padding: 16px 10px;
+      min-height: 86px;
       cursor:pointer;
       color:#fff;
-      font-weight: 900;
+      font-weight: 1000;
       letter-spacing:.6px;
       text-transform: uppercase;
       box-shadow: 0 18px 35px rgba(0,0,0,.35);
       border: 1px solid rgba(255,255,255,.12);
-      backdrop-filter: blur(2px);
-      -webkit-backdrop-filter: blur(2px);
       display:flex;
       align-items:center;
       justify-content:center;
       text-align:center;
       line-height:1.1;
     }
+    .poleBtn:active{ transform: translateY(1px); }
 
-    /* Modal (plein écran) */
+    /* Modal */
     .modal{
       position:fixed; inset:0;
       display:none;
-      background: rgba(0,0,0,.6);
+      background: rgba(0,0,0,.60);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       z-index: 9999;
       padding: 14px;
     }
-    .modal.show{display:block;}
+    .modal.show{ display:block; }
+
     .modalBox{
       max-width: 560px;
       margin: 0 auto;
@@ -187,10 +210,13 @@
       box-shadow: 0 25px 70px rgba(0,0,0,.55);
       background: rgba(18,18,18,.72);
     }
+
+    /* ✅ Bandeau (pôle) : couleur dynamique */
     .modalHead{
       padding: 14px 14px;
       display:flex; align-items:center; justify-content:space-between; gap:10px;
       border-bottom: 1px solid rgba(255,255,255,.10);
+      color:#fff;
     }
     .modalTitle{
       font-weight: 1000;
@@ -202,37 +228,62 @@
       cursor:pointer;
       border-radius: 999px;
       padding: 10px 14px;
-      font-weight: 900;
+      font-weight: 1000;
       color:#fff;
       background: rgba(0,0,0,.35);
       border: 1px solid rgba(255,255,255,.14);
     }
-    .modalBody{padding: 12px 14px 16px;}
+
+    .modalBody{ padding: 12px 14px 16px; }
+
     .sub{
       margin-top: 10px;
-      padding: 12px 12px;
       border-radius: 18px;
-      background: rgba(0,0,0,.28);
+      overflow:hidden;
       border: 1px solid rgba(255,255,255,.10);
+      background: rgba(0,0,0,.20);
     }
-    .subName{
+
+    /* ✅ Bandeau sous-pôle : même couleur que pôle */
+    .subBar{
+      padding: 10px 12px;
       font-weight: 1000;
       text-transform: uppercase;
       letter-spacing:.6px;
-      margin-bottom: 8px;
-      opacity:.92;
+      color:#fff;
     }
-    ul{margin:0; padding-left: 18px;}
-    li{margin: 6px 0; color: rgba(255,255,255,.92); font-weight:600;}
-    .hint{color: rgba(255,255,255,.70); font-size: 13px; margin-top: 8px;}
+
+    .subBody{
+      padding: 10px 12px 12px;
+    }
+
+    ul{ margin:0; padding-left: 18px; }
+    li{
+      margin: 6px 0;
+      color: rgba(255,255,255,.92);
+      font-weight:650;
+      line-height:1.25;
+      white-space: normal;
+      overflow-wrap: anywhere;
+    }
+
+    .hint{
+      color: rgba(255,255,255,.70);
+      font-size: 13px;
+      margin-top: 10px;
+    }
+
+    /* ✅ Soulignement des fonctions (Amicale > Bureau) */
+    .roleU{
+      text-decoration: underline;
+      text-underline-offset: 3px;
+      font-weight: 1000;
+    }
   </style>
 </head>
 
 <body>
   <div class="page">
-    <div class="bg"></div>
-    <div class="veil"></div>
-
     <header>
       <div class="title">Organigramme</div>
       <div class="topBtns">
@@ -243,7 +294,7 @@
     <div class="card">
       <div class="directionWrap">
         <div class="chefRow">
-          <div class="badge chef" id="chefBox">
+          <div class="badge chef">
             <div class="role">Chef de centre</div>
             <div class="name" id="chefName">—</div>
           </div>
@@ -279,8 +330,7 @@
 
   <script>
     /* ==========================
-       DATA (A = fixe)
-       👉 C’EST ICI QUE TU EDITES
+       DATA (fixe)
        ========================== */
     const DATA = {
       direction: {
@@ -321,8 +371,8 @@
           label: "Groupe Opérationnel",
           color: "#f1d85a",
           subpoles: [
-            { label: "DECI / Prévision / Inventaires / Parcellaires", membres: ["ADC Vénante Pierre"] },
-            { label: "Référent VSAV / Inventaire VSAV", membres: ["SCH Wallarin Hélène", "SCH Stellato Vincent"] },
+            { label: "DECI / Prévision", membres: ["ADC Vénante Pierre"] },
+            { label: "Référent VSAV", membres: ["SCH Wallarin Hélène", "SCH Stellato Vincent"] },
             { label: "Référent SSSM", membres: ["INF Dur Amélie", "INF Lepezel Laura"] }
           ]
         },
@@ -337,7 +387,7 @@
         },
         {
           id: "recrutement",
-          label: "Groupe Recrutement / Volontariat",
+          label: "Groupe Recrutement",
           color: "#d06ad6",
           subpoles: [
             { label: "SPV", membres: ["ADC Vénante Pierre", "ADJ Laleuuw Franck", "ADJ Sénéchal Benjamin"] }
@@ -371,7 +421,7 @@
       DATA.poles.forEach(p => {
         const btn = document.createElement("button");
         btn.className = "poleBtn";
-        btn.style.background = `linear-gradient(180deg, ${hexToRgba(p.color, .92)}, ${hexToRgba(p.color, .68)})`;
+        btn.style.background = `linear-gradient(180deg, ${hexToRgba(p.color, .92)}, ${hexToRgba(p.color, .70)})`;
         btn.textContent = p.label;
         btn.onclick = () => openPole(p);
         $grid.appendChild(btn);
@@ -382,30 +432,51 @@
        MODAL
        ========================== */
     const $modal = document.getElementById("modal");
+    const $modalHead = document.getElementById("modalHead");
     const $modalTitle = document.getElementById("modalTitle");
     const $modalBody = document.getElementById("modalBody");
 
     function openPole(p){
+      // ✅ Bandeau pôle = même couleur
+      $modalHead.style.background = `linear-gradient(180deg, ${hexToRgba(p.color, .95)}, ${hexToRgba(p.color, .75)})`;
       $modalTitle.textContent = p.label;
+
       $modalBody.innerHTML = "";
 
       (p.subpoles || []).forEach(sp => {
         const box = document.createElement("div");
         box.className = "sub";
 
-        const t = document.createElement("div");
-        t.className = "subName";
-        t.textContent = sp.label;
+        // ✅ Bandeau sous-pôle = même couleur
+        const bar = document.createElement("div");
+        bar.className = "subBar";
+        bar.style.background = `linear-gradient(180deg, ${hexToRgba(p.color, .92)}, ${hexToRgba(p.color, .72)})`;
+        bar.textContent = sp.label;
+
+        const body = document.createElement("div");
+        body.className = "subBody";
 
         const ul = document.createElement("ul");
+
         (sp.membres || []).forEach(m => {
           const li = document.createElement("li");
-          li.textContent = m;
+
+          // ✅ Souligner fonctions uniquement dans Amicale > Bureau
+          if (p.id === "amicale" && /bureau/i.test(sp.label) && String(m).includes(":")) {
+            const [rolePart, ...rest] = String(m).split(":");
+            const namePart = rest.join(":").trim();
+            li.innerHTML = `<span class="roleU">${escapeHtml(rolePart.trim())} :</span> ${escapeHtml(namePart)}`;
+          } else {
+            li.textContent = String(m);
+          }
+
           ul.appendChild(li);
         });
 
-        box.appendChild(t);
-        box.appendChild(ul);
+        body.appendChild(ul);
+        box.appendChild(bar);
+        box.appendChild(body);
+
         $modalBody.appendChild(box);
       });
 
@@ -421,9 +492,9 @@
     $modal.addEventListener("click", (e)=>{ if(e.target === $modal) closeModal(); });
 
     function goBack(){
-      // si tu veux forcer vers index.html :
-      // window.location.href = "index.html";
-      history.back();
+      // ✅ Retour toujours vers le portail (recommandé)
+      window.location.href = "index.html";
+      // sinon : history.back();
     }
 
     function hexToRgba(hex, a){
@@ -433,6 +504,15 @@
       const g = parseInt(h.slice(2,4),16);
       const b = parseInt(h.slice(4,6),16);
       return `rgba(${r},${g},${b},${a})`;
+    }
+
+    function escapeHtml(s){
+      return String(s)
+        .replaceAll("&","&amp;")
+        .replaceAll("<","&lt;")
+        .replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;")
+        .replaceAll("'","&#039;");
     }
 
     render();
