--- a/organigramme.html
+++ b/organigramme.html
@@ -344,7 +344,7 @@
           label: "Équipe de soutien",
           color: "#5aa9d6",
           subpoles: [
-            { label: "Membres", membres: ["CNE Bienaimé Jean Paul", "ADJ Lecourtier Guy", "SGT Chavrelleis Gilles", "SGT Beausire Bernard"] }
+            { label: "Membres", membres: ["CNE Bienaimé Jean Paul", "ADJ Lecourtier Guy", "SGT Chavrelles Gilles", "SGT Beausire Bernard"] }
           ]
         },
         {
