--- a/equipes.html
+++ b/equipes.html
@@ -331,7 +331,7 @@
 
 <script>
   /** ✅ Mets ici TON URL /exec */
-  const API = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgOQf_7k0aCmG-DdVbsnk7B7P-fZtLmvqojaD7F1_DHmA8xFyPSm3m10kDksI0a3zsQeaRv63x-UhxWdKdRlcuse2zFZuTvqbxUg7mMzI-58c1Hg9fwUIpQEVN5P5sm3hbRxY4Ih5hr3zEWwRHCelzVWXUUQBAH2Ch3g5ETuwsqg_rE9-cXbOqnyCeySiUQc_brVQqMXhtxUTOxEpnfm89fxy_lABjJdlYtHSqworxFhKmMZugDBplw_YLeNrNsMWqEod_T1oOOFJB5VZFF8CukpSt5og&lib=MUrxZm6e_GZu_nx92INa1hxWMXI2VoG64;
+  const API = "https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec";
   const BACK_URL = "index.html"; // ajuste si besoin
 
   const $status = document.getElementById("status");
